--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container displaylist">
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-6 align-self-center" id="AC">calculator</div>
+            <div class="col-6 align-self-center">calculator</div>
             <div class="col-3"></div>
         </div>
         <div class="row display-screen">
